# dataset-tool

./: .gitignore  CMakeLists.txt  README.md
lib/subcommand/: command_runner.h  offset_command.cpp  offset_command.h  split_command.cpp  split_command.h
lib/utility/annotations/: annotations.cpp  annotations.h
src/: main.cpp
